--- a/layouts/partials/site-header.html
+++ b/layouts/partials/site-header.html
@@ -5,7 +5,7 @@
     <div class="{{ .Site.Params.cover_dimming_class | default "bg-black-60" }}">
       {{ partial "site-navigation.html" .}}
       <div class="tc-l pv2 ph2">
-        <h1 class="f3 f-subheadline-l fw2 white-90 mb0 lh-title">
+        <h1 class="f1 fw2 white-90 mb0 lh-title">
           {{ .Title | default .Site.Title }}
         </h1>
         {{ with .Params.description }}
