--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -44,10 +44,12 @@
 
   <body class="ma0 {{ $.Param "body_classes"  | default "avenir bg-near-white"}}{{ with getenv "HUGO_ENV" }} {{ . }}{{ end }}">
 
+
     {{ block "header" . }}{{ partial "site-header.html" .}}{{ end }}
-    <main class="pa2" role="main">
+    <main class="pb7" role="main">
       {{ block "main" . }}{{ end }}
     </main>
+    {{ partial "func/last-updated.html" . }}
     {{ block "footer" . }}{{ partialCached "site-footer.html" . }}{{ end }}
   </body>
 </html>
